<resources>
    <string name="app_name">BMM</string>
    <string name="loginButton">Login</string>


    <string name="country_prompt">Months</string>
    <string name="ok">Tesdiqle</string>

    <string-array name="country_arrays">
        <item>Sentyabr</item>
        <item>Oktyabr</item>
        <item>Noyabr</item>
        <item>Dekabr</item>
        <item>Yanvar</item>
        <item>Fevral</item>
        <item>Mart</item>
        <item>Aprel</item>
        <item>May</item>
    </string-array>


    <string name="Monday">Bazar ertesi</string>
    <string name="Tuesday">Cersenbe Axsami</string>
    <string name="Wednesday">Cersenbe</string>
    <string name="Thursday">Cume axsami</string>
    <string name="Friday">Cume</string>

    <string name="buttonHeight">60dp</string>
</resources>
