<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonWeek1"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:text="1"
                android:background="@color/colorMainGreen"
                android:textColor="@color/colorPrimary"
                android:textSize="10dp"/>
            <Button
                android:id="@+id/buttonWeek2"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:text="2"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorMainGreen"
                android:textSize="10dp"/>
            <Button
                android:id="@+id/buttonWeek3"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:text="3"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorMainGreen"
                android:textSize="10dp"/>
            <Button
                android:id="@+id/buttonWeek4"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:text="4"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorMainGreen"
                android:textSize="10dp"/>
            <Button
                android:id="@+id/buttonWeek5"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:text="5"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorMainGreen"
                android:textSize="10dp"/>
        </LinearLayout>
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:entries="@array/country_arrays"
            android:prompt="@string/country_prompt"
            android:pointerIcon="wait" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:textSize="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/ok"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorMainGreen" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:id="@+id/linearLayoutRecycler"
        android:visibility="gone"
        >
        <Button
            android:id="@+id/buttonTemporarily"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@color/colorMainGreen"
            android:text="@string/Monday"
            android:textColor="@color/colorPrimary"
            android:textSize="10dp"
            android:layout_marginTop="10dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:visibility="gone">
        </android.support.v7.widget.RecyclerView>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleview2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:visibility="gone">
        </android.support.v7.widget.RecyclerView>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleview3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:visibility="gone">
        </android.support.v7.widget.RecyclerView>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleview4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:visibility="gone">
        </android.support.v7.widget.RecyclerView>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleview5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:visibility="gone">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:id="@+id/linearLayoutButton"
        >

        <Button
            android:id="@+id/buttonMonday"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@color/colorMainGreen"
            android:text="@string/Monday"
            android:textColor="@color/colorPrimary"
            android:textSize="10dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/buttonTuesday"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@color/colorMainGreen"
            android:text="@string/Tuesday"
            android:textColor="@color/colorPrimary"
            android:textSize="10dp"
            android:layout_marginTop="10dp"

            />
        <Button
            android:id="@+id/buttonWednesday"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@color/colorMainGreen"
            android:text="@string/Wednesday"
            android:textColor="@color/colorPrimary"
            android:textSize="10dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/buttonThursday"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorMainGreen"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/Thursday"
            android:textColor="@color/colorPrimary"
            android:textSize="10dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/buttonFriday"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@color/colorMainGreen"
            android:text="@string/Friday"
            android:textColor="@color/colorPrimary"
            android:textSize="10dp"
            android:layout_marginTop="10dp"
            />



    </LinearLayout>


</RelativeLayout>